# BlockChain

./: Architexture.txt  CMakeLists.txt  main.cpp
src/BlockChainCore/: Block.cpp  Block.h
